# labbar-lab-lint-demo

./: .gitmodules
lab-assistant/: edgedb.toml  index_docs.py  pyproject.toml
lab-assistant/notebooks/: prompt_parser.ipynb  quickstart.ipynb
lab-gpt/: constants.py  query.py  utils.py
lab-gpt/scripts/: opentron_scrape.py
protocol-assistant-api/: pyproject.toml
protocol-assistant-api/api/: .env.example  .gitignore  auth.py  logging_config.py  main.py
protocol-assistant-api/api/config/: base_chat_payload.py  danswer_endpoints.yaml  headers.py  prompt_sequence.yaml
protocol-assistant-api/api/exceptions/: upload_exceptions.py
protocol-assistant-api/api/models/: upload.py
protocol-assistant-api/api/routes/: chat.py  upload_protocol.py
protocol-assistant-api/api/services/: file_service.py  upload_service.py
protocol-assistant-api/api/utils/: initialize.py  parsing.py
protocol-assistant-api/tests/: test_chat.py
